--- a/financer/package.json
+++ b/financer/package.json
@@ -23,15 +23,17 @@
     "start": "npm run dev",
     "clean": "rimraf build",
     "dev": "webpack-dev-server --env profile=desktop --env browser=yes --env verbose=no",
+    "dev:phone": "webpack-dev-server --env profile=phone --env browser=yes --env verbose=no",
     "build": "npm run clean && cross-env webpack --env profile=desktop --env environment=production --env treeshake=yes",
-    "build:testing": "npm run clean && cross-env webpack --env profile=desktop --env treeshake=yes --env cmdopts=--testing"
+    "build:phone": "npm run clean && cross-env webpack --env profile=phone --env environment=production --env treeshake=yes"
   },
   "dependencies": {
     "@sencha/ext": "~7.7.0",
     "@sencha/ext-exporter": "^7.7.0",
     "@sencha/ext-modern": "~7.7.0",
     "@sencha/ext-modern-locale": "^7.7.0",
-    "@sencha/ext-modern-theme-material": "~7.7.0"
+    "@sencha/ext-modern-theme-material": "~7.7.0",
+    "@sencha/ext-modern-treegrid": "^7.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
