--- a/financer/package.json
+++ b/financer/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@sencha/ext": "~7.7.0",
+    "@sencha/ext-charts": "^7.7.0",
     "@sencha/ext-exporter": "^7.7.0",
     "@sencha/ext-modern": "~7.7.0",
     "@sencha/ext-modern-locale": "^7.7.0",
